# daily-news

./: README.md  generate_news.py  pyproject.toml  requirements.txt  sources.yaml
.github/workflows/: daily-news.yml
daily_news/: __init__.py  builder.py
docs/: index.html  news.json
docs/archive/: 2026-04-14.html  2026-04-15.html  2026-04-16.html  2026-04-17.html  2026-04-18.html  2026-04-19.html  2026-04-20.html  2026-04-21.html  2026-04-22.html  2026-04-23.html  2026-04-24.html  2026-04-25.html  2026-04-26.html  2026-04-27.html  2026-04-28.html  2026-04-29.html  2026-04-30.html  2026-05-01.html  2026-05-02.html  2026-05-03.html  2026-05-04.html  2026-05-05.html  2026-05-06.html  2026-05-07.html  2026-05-08.html  2026-05-09.html  2026-05-10.html  2026-05-11.html  2026-05-12.html  2026-05-13.html  2026-05-14.html  2026-05-15.html  2026-05-16.html  2026-05-17.html  2026-05-18.html  2026-05-19.html  2026-05-20.html  2026-05-21.html  2026-05-22.html  2026-05-23.html  (+62 more)
templates/: archive.html.j2  archive_index.html.j2  index.html.j2
tests/: test_builder.py
