[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-news"
version = "0.1.0"
description = "Generate a static AI news digest for GitHub Pages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "feedparser==6.0.11",
  "Jinja2==3.1.6",
  "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
